[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "finx"
authors = [
  { name="FinX Capital Markets LLC", email="support@finx.io" },
]
license = {file = "LICENSE"}
description = "Python client for FinX Platform APIs"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
install_requires = [
    "aiohttp>=3.8.4",
    "setuptools>=67.0.0",
    "nest-asyncio>=1.5.6",
    "numpy>=1.25.0",
    "pandas>=2.0.2",
    "plotly>=5.15.0",
    "pytest>=6.2.5",
    "requests>=2.31.0",
    "scipy>=1.10.1",
    "websocket-client>=1.6.0",
    "websockets>=11.0.3",
]
dependencies = [
    "aiohttp",
    "setuptools",
    "nest-asyncio",
    "numpy",
    "pandas",
    "plotly",
    "pytest",
    "requests",
    "scipy",
    "websocket-client",
    "websockets",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["finx*"]
namespaces = false

[tool.setuptools.package-dir]
finx = "src/finx"

[tool.setuptools.dynamic]
version = {attr = "finx.version.NEXT_VERSION"}

[project.urls]
"Homepage" = "https://github.com/FinX-IO/finx"
"Bug Tracker" = "https://github.com/FinX-IO/finx/issues"

